--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List with Animated Bubbles</title>
+    <title>Task List with Dynamic Particle Animation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1>Task List</h1>
         <div class="form-group">
             <input type="text" id="taskInput" placeholder="Add a new task...">
             <button onclick="addTask()">Add Task</button>
