Updates to new task button/box

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>Task List</h1>
         <div class="form-group">
-            <input type="text" id="taskInput" placeholder="Add a new task...">
-            <button onclick="addTask()">Add Task</button>
+            <button class="btn-circle" id="addTaskBtn">+</button>
+            <input type="text" id="taskInput" placeholder="Add a new task..." style="display: none;">
         </div>
         <div id="tasksContainer"></div>
     </div>
