--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <title>Task List with Dynamic Particle Animation</title>
+    <title>To Do Fluid Concept</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
