--- a/Bubbles/bubbles.html
+++ b/Bubbles/bubbles.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <div id="bubblesContainer"></div>
         <div id="todoContainer">
             <div class="todo-input-container">
                 <input type="text" id="todoInput" placeholder="Add a new task...">
