Clock spacing + staggered float

--- a/Bubbles/bubbles.html
+++ b/Bubbles/bubbles.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div id="bubblesContainer"></div>
+        <div id="clock"></div>
         <div id="todoContainer">
             <div class="todo-input-container">
                 <input type="text" id="todoInput" placeholder="Add a new task...">
