--- a/Bubbles/bubbles.html
+++ b/Bubbles/bubbles.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div id="bubblesContainer"></div>
         <div id="clock"></div>
-        <div id="todoContainer">
-            <div class="todo-input-container">
-                <input type="text" id="todoInput" placeholder="Add a new task...">
-                <button id="addTodo">+</button>
+        <div id="bubblesContainer">
+            <div id="todoContainer">
+                <div class="todo-input-container">
+                    <input type="text" id="todoInput" placeholder="Add a new task...">
+                    <button id="addTodo">+</button>
+                </div>
+                <ul id="todoList"></ul>
             </div>
-            <ul id="todoList"></ul>
         </div>
     </div>
 
